--- a/style.css
+++ b/style.css
@@ -1,11 +1,37 @@
-.heading{
-    width: 50%;
-}
 body{
-    background-color: rgb(226, 137, 19);
+    font-family: 'Dancing Script', cursive;
+    background-color:rgb(137, 131, 212);
 }
-#camera{
-    border: 1px dashed black;
-    width:350px;
-    height: 300px;
+.header_div{
+    background-color: rgb(102, 98, 160);
+    color:rgb(49, 228, 174);
+    text-shadow: 5px 5px 5px rgb(49, 228, 174);
+    font-weight: bold;
+}
+.header_div p{
+    font-family: 'Shippori Antique', sans-serif;
+    color: rgb(179, 15, 15);
+    letter-spacing: 2px;
+    font-size: 12px;
+    font-weight: bold;
+}
+.main_div button{
+    font-family: 'Shippori Antique', sans-serif;
+    margin-top: 30px;
+    width:130px;
+    font-weight: bolder;
+    letter-spacing: 3px;
+    background-color: darkblue;
+}
+.copy_right_footer{
+    position: fixed;
+    background-color: rgb(102, 98, 160);
+    color:rgb(179, 15, 15);
+    bottom: 0;
+    width: 100%;
+    font-size: 18px;
+    line-height: 3;
+    text-align: center;
+    text-shadow: 5px 5px 5px rgb(179, 15, 15);
+    font-weight: bold;
 }
